@@ -1,5 +1,9 @@
 2003-10-28  Patrice Dumas  <dumas@centre-cired.fr>
 
+	* doc/texi2html.texi: add informations about internationalization
+
+2003-10-28  Patrice Dumas  <dumas@centre-cired.fr>
+
 	* texi2html.pl: if not split and there is a leading directory 
 	specified with --out, create that directory.
 	If a directory creation fails, abort.
